--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,31 +1,109 @@
 <%# views=>index.html %>
 <p style="color: green"><%= notice %></p>
+
+
+<!-- app/views/shared/_footer.html.erb -->
+<footer class="bg-black text-white py-2">
+  <div class="container mx-auto flex justify-between items-center">
+    <div>
+      <span class="text-lg font-bold">Components</span>
+    </div>
+    <div class="flex space-x-4">
+      <a href="#" class="hover:text-gray-500">Home</a>
+      <a href="#" class="hover:text-gray-500">Code</a>
+      <a href="#" class="hover:text-gray-500">Login</a>
+    </div>
+    <div>
+      <%= form_tag(components_path, method: 'get', class: 'flex items-center') do %>
+        <%= text_field_tag :search, params[:search], placeholder: 'Search components', class: 'rounded bg-gray-800 text-white px-4 py-2 focus:outline-none focus:shadow-outline' %>
+        <%= submit_tag 'Search', class: 'ml-2 bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline' %>
+      <% end %>
+    </div>
+  </div>
+</footer>
+
+
+
+<!-- app/views/index.html.erb -->
+<p style="color: green"><%= notice %></p>
+
 <h1>Components</h1>
-  <%= turbo_frame_tag 'targ' do %>
-    <%#= render partial: 'test_partial', locals: { component: @component } %>
-  <% end %>
 
-
+<%= turbo_frame_tag 'targ' do %>
+  <%#= render partial: 'test_partial', locals: { component: @component } %>
+<% end %>
 
 <%= @components.first.attributes.keys %>
-<% unless  @components.all? { |c| c[:name].blank? }%>
-  <%= link_to 'Name', components_path(sort_by: 'name', order: (params[:order] == 'asc' && params[:sort_by] == 'name') ? 'desc' : 'asc') %>
-<% end%>
-  <% unless  @components.all? { |c| c[:lang].blank? }%>
-  <%= link_to 'Lang', components_path(sort_by: 'lang', order: (params[:order] == 'asc' && params[:sort_by] == 'lang') ? 'desc' : 'asc') %>
-<% end%>
-<% unless  @components.all? { |c| c[:category].blank? }%>
-  <%= link_to 'category', components_path(sort_by: 'category', order: (params[:order] == 'asc' && params[:sort_by] == 'category') ? 'desc' : 'asc') %>
+
+<% unless @components.all? { |c| c[:name].blank? } %>
+  <%= link_to 'Name', components_path(sort_by: 'name', order: (params[:order] == 'asc' && params[:sort_by] == 'name') ? 'desc' : 'asc'), class: 'text-blue-500 hover:text-blue-700' %>
 <% end %>
+
+<% unless @components.all? { |c| c[:lang].blank? } %>
+  <%= link_to 'Lang', components_path(sort_by: 'lang', order: (params[:order] == 'asc' && params[:sort_by] == 'lang') ? 'desc' : 'asc'), class: 'text-blue-500 hover:text-blue-700' %>
+<% end %>
+
+<% unless @components.all? { |c| c[:category].blank? } %>
+  <%= link_to 'Category', components_path(sort_by: 'category', order: (params[:order] == 'asc' && params[:sort_by] == 'category') ? 'desc' : 'asc'), class: 'text-blue-500 hover:text-blue-700' %>
+<% end %>
+
 <br><br>
 
 <% @components.first.attributes.keys.each do |attr_name| %>
   <% unless @components.all? { |c| c[attr_name].blank? } %>
-    <%#= link_to attr_name.capitalize, components_path(sort_by: attr_name, order: toggle_order(attr_name)) %>
-    <%= link_to attr_name.capitalize, components_path(sort_by: attr_name, order: (params[:order] == 'asc' && params[:sort_by] == attr_name) ? 'desc' : 'asc') %>
-
+    <%= link_to attr_name.capitalize, components_path(sort_by: attr_name, order: (params[:order] == 'asc' && params[:sort_by] == attr_name) ? 'desc' : 'asc'), class: 'text-blue-500 hover:text-blue-700' %>
   <% end %>
 <% end %>
+
+<!-- ... rest of your code ... -->
+
+
+
+
+<!-- app/views/index.html.erb -->
+<p style="color: green"><%= notice %></p>
+
+<div class="flex justify-between items-center mb-4">
+  <h1 class="text-3xl font-bold">Components</h1>
+  <div class="hidden md:block">
+    <nav class="flex space-x-4">
+      <%= link_to 'Link 1', '#', class: 'text-white hover:text-gray-300' %>
+      <%= link_to 'Link 2', '#', class: 'text-white hover:text-gray-300' %>
+    </nav>
+  </div>
+</div>
+
+<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+  <% @components.each do |component| %>
+    <div class="bg-white rounded-lg shadow-md p-6">
+      <!-- Your component content goes here -->
+      <h2 class="text-lg font-bold mb-2"><%= component.name %></h2>
+      <p class="text-gray-600 mb-4"><%= component.lang %></p>
+      <%= link_to "Show this component", component, class: 'text-blue-500 hover:text-blue-700' %>
+      <%= link_to "Inspect", inspectc_components_path(component), remote: true, data: { toggle: "modal", target: "#inspectModal", turbo_frame: 'targ' }, class: 'text-blue-500 hover:text-blue-700 ml-2' %>
+    </div>
+  <% end %>
+</div>
+
+<!-- Add this modal at the end of your HTML body -->
+<div class="modal fade" id="inspectModal" tabindex="-1" role="dialog" aria-labelledby="inspectModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="inspectModalLabel">Inspect Component Code</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="inspectModalBody">
+        <!-- Content will be dynamically loaded here via AJAX -->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
 <div id="components">
   <% @components.each do |component| %>
