--- a/app/views/shared/_notifications.html copy.erb
+++ b/app/views/shared/_notifications.html copy.erb
@@ -1,17 +1,6 @@
 
 <% if message %>
-<div 
-id="toast-success" 
-class="absolute top-2 right-2 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800" 
-role="alert"
-data-controller="notification"
-data-notification-delay-value="2000"
-data-transition-enter-from="opacity-0 translate-x-6"
-data-transition-enter-to="opacity-100 translate-x-0"
-data-transition-leave-from="opacity-100 translate-x-0"
-data-transition-leave-to="opacity-0 translate-x-6"
-
->
+<div id="toast-success" class="absolute top-2 right-2 flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800" role="alert">
     <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200">
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
@@ -26,19 +15,6 @@ data-transition-leave-to="opacity-0 translate-x-6"
         </svg>
     </button>
 </div>
-
-<% end %>
-
-
-
-
-
-
-
-
-<%# 
-
-
 <div id="toast-danger" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800" role="alert">
     <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-red-500 bg-red-100 rounded-lg dark:bg-red-800 dark:text-red-200">
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -68,4 +44,6 @@ data-transition-leave-to="opacity-0 translate-x-6"
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
         </svg>
     </button>
-</div> %>
+</div>
+<% end %>
+
