model-works-PRE-change-modals

--- a/app/views/components/_test_partial.html.erb
+++ b/app/views/components/_test_partial.html.erb
@@ -1,7 +1,7 @@
 <script>
   var jjj = 'hi';
 </script>
-nice job turboz
+dice job turboz
 <% if @selected_component %>
   <%= @selected_component.name %>
   <%= flash[:my_var] %>
