modal-works-no-replace-wrong-append

--- a/app/views/components/_test_partial.html.erb
+++ b/app/views/components/_test_partial.html.erb
@@ -1,8 +1,9 @@
 <script>
   var jjj = 'hi';
 </script>
-dice job turboz
+dice job turboz <%= @selected_component[:name] %>
 <% if @selected_component %>
   <%= @selected_component.name %>
   <%= flash[:my_var] %>
 <% end %>
+
