--- a/app/views/components/inspectc.html.erb
+++ b/app/views/components/inspectc.html.erb
@@ -1,4 +1,29 @@
   <script>
   jsv = '<%= @selected_component[:name] %>';
 </script>
-nice job turbo
+nice job turbo 
+dice job turboz <%= @selected_component[:name] %>
+<% if @selected_component %>
+  <%= @selected_component.name %>
+  <%= flash[:my_var] %>
+<% end %>
+<!-- Add this modal at the end of your HTML body -->
+<div class="modal fade" id="inspectModal" tabindex="-1" role="dialog" aria-labelledby="inspectModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="inspectModalLabel">
+        <% if @selected_component %>
+          <%= @selected_component.name %>
+        <% end %>
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="inspectModalBody">
+        <!-- Content will be dynamically loaded here via AJAX -->
+      </div>
+    </div>
+  </div>
+</div>
